# babata

./: .gitignore  AGENTS.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
00_docs/: README.md
01_app/: Cargo.toml
01_app/01_babata_domain/: Cargo.toml
01_app/01_babata_domain/src/: capability.rs  collection.rs  entities.rs  error.rs  ids.rs  kinds.rs  knowledge.rs  lib.rs  ops.rs  output.rs  processing.rs  query.rs  route.rs  sublibrary.rs  value.rs  view.rs
01_app/02_babata_application/: Cargo.toml
01_app/02_babata_application/src/: dto.rs  error.rs  lib.rs
01_app/02_babata_application/src/ports/: asset_store.rs  backup_driver.rs  candidate_runner.rs  capability_registry.rs  clock.rs  collection_repository.rs  dense_expression_preview.rs  derived_repository.rs  job_repository.rs  knowledge_core_repository.rs  mod.rs  output_builder.rs  process_provider.rs  raw_repository.rs  read_projection.rs  semantic_digest_provider.rs  source_adapter.rs  sublibrary_definition.rs  sublibrary_materializer.rs  view_builder.rs
01_app/02_babata_application/src/usecases/: capabilities.rs  capture.rs  collector.rs  dense_expression_preview.rs  explore.rs  knowledge.rs  mod.rs  ops.rs  outputs.rs  process.rs  routes.rs  semantic_digest.rs  sublibraries.rs  views.rs  workspace.rs
01_app/03_babata_infrastructure/: Cargo.toml
01_app/03_babata_infrastructure/src/: capabilities.rs  config.rs  lib.rs  observability.rs  paths.rs
01_app/03_babata_infrastructure/src/assets/: file_store.rs  mod.rs
01_app/03_babata_infrastructure/src/backup/: manifest.rs  mod.rs  restic.rs  sqlite_snapshot.rs
01_app/03_babata_infrastructure/src/processing/: bailian_api.rs  bailian_cli.rs  local_extract.rs  mod.rs  registry.rs  semantic_digest.rs
01_app/03_babata_infrastructure/src/security/: mod.rs  privacy.rs  secrets.rs
01_app/03_babata_infrastructure/src/sources/: candidate.rs  mod.rs  registry.rs
01_app/03_babata_infrastructure/src/sources/providers/: bilibili.rs  bilibili_collection.rs  browser.rs  chatgpt.rs  conversations.rs  doubao.rs  douyin.rs  evernote.rs  feishu.rs  first_party.rs  kimi.rs  local_files.rs  mod.rs  onenote.rs  wechat.rs  xiaohongshu.rs  yuque.rs  zhihu.rs
01_app/03_babata_infrastructure/src/sqlite/: collection_migrate.rs  collection_repository.rs  derived_migrate.rs  derived_repository.rs  job_repository.rs  knowledge_core_repository.rs  migrate.rs  mod.rs  raw_repository.rs  read_projection.rs
01_app/03_babata_infrastructure/src/tools/: command_runner.rs  mod.rs  yt_dlp.rs
01_app/03_babata_infrastructure/src/views/: datasette.rs  dense_expression.rs  exports.rs  manifest.rs  mod.rs  obsidian.rs  output.rs  sublibrary.rs
01_app/04_babata_cli/: Cargo.toml
01_app/04_babata_cli/src/: app.rs  main.rs  render.rs
01_app/04_babata_cli/src/commands/: capabilities.rs  capture.rs  collector.rs  data.rs  explore.rs  knowledge.rs  mod.rs  ops.rs  outputs.rs  process.rs  routes.rs  sublibraries.rs  views.rs  workspace.rs
01_app/04_babata_cli/tests/: cli.rs  p3_raw.rs  p4_routes.rs  p6_sublibraries_outputs.rs
01_app/05_babata_local_api/: Cargo.toml
01_app/05_babata_local_api/src/: app.rs  auth.rs  error.rs  lib.rs  main.rs  requests.rs  responses.rs  state.rs
01_app/05_babata_local_api/src/routes/: capture.rs  collector.rs  explore.rs  health.rs  mod.rs  outputs.rs  process.rs  sublibraries.rs  workspace.rs
01_app/06_babata_worker/: Cargo.toml
01_app/06_babata_worker/src/: app.rs  lease.rs  main.rs  metrics.rs  runner.rs  shutdown.rs
02_skills/: README.md
03_migrations/: 00_REGISTRY.md
05_scripts/: check-data-root-boundaries.ps1  check-doc-provenance.ps1  check-doc-traceability.ps1  check-interface-ownership.ps1  check-no-secondary-writer.ps1  check-p2-skeleton-inventory.ps1  check-p3-raw-inventory.ps1  check-r1-inventory.ps1  check-rust-boundaries.ps1  migrate-auxiliary-data-roots.ps1  test-auxiliary-data-root-migration.ps1  test-doc-provenance.ps1  test-doc-traceability.ps1
06_config/: agent-browser-read-only-policy.example.json  app.example.toml  backup.example.toml  data-root.example.toml  pipelines.example.toml  privacy.example.toml  (+3 more)
(+94 files in other folders)
