[package]
name = "babata-application"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
babata-domain = { path = "../01_babata_domain" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
ulid = "1.2"

[dev-dependencies]
tempfile = "3.16"
