[package]
name = "babata-infrastructure"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
babata-domain = { path = "../01_babata_domain" }
babata-application = { path = "../02_babata_application" }
mime_guess = "2.0"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
tempfile = "3.16"
