[package]
name = "babata-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "babata"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
babata-domain = { path = "../01_babata_domain" }
babata-application = { path = "../02_babata_application" }
babata-infrastructure = { path = "../03_babata_infrastructure" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
babata-infrastructure = { path = "../03_babata_infrastructure", features = ["test-support"] }
tempfile = "3.16"
